# teradata-rag-case-study

./: .pre-commit-config.yaml  README.md  pre-commit-config.yaml
UI/: gradio_chatbot.py
UI/.gradio/flagged/: dataset1.csv
base_image/: Dockerfile  cloudbuild.yaml  pyproject.toml
base_image/base_image/: cloudbuil.yaml  pyproject.toml
helm-charts/support-agent/: Chart.yaml  values.yaml
helm-charts/support-agent/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-charts/support-agent/templates/tests/: test-connection.yaml
llm_evaluation/: golden_dataset.py  golder_dataset.py  llm_based_eval.py
performance-test/build-deploy/: .env.yaml  cloudbuild.yaml
performance-test/src/: main.py  performance_test_script.py  requirements.txt  test_data.py
serving/endpoint_support_agent/: Dockerfile  SecretManager.py  cloudbuild.yaml  endpoint.py  llm_request.py  schema.py  support_agent.py
serving/endpoint_support_agent/prompts/: system_prompt.txt
serving/endpoint_support_agent/vector_db/: chroma.sqlite3
shared/: SecretManager.py
training/generate_vector_db/build-deploy/: .env.yaml  cloudbuild.yaml
training/generate_vector_db/src/: GcsManager.py  SecretManager.py  main.py  requirements.txt
training/pipeline_generate_vector_db/build-deploy/: .env.yaml  cloudbuild.yaml
training/pipeline_generate_vector_db/src/: main.py  requirements.txt
