[tool.poetry]
name = "base_image"
version = "0.1.0"
description = "Base image for Teradata RAG case study"
authors = ["Swapnil Tayade <tayadeswapnils@gmail.com>"]
packages = [{ include = "base_image" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
langchain = "^0.3.26"
langchain-core = "^0.3.70"
langchain-text-splitters = "^0.3.8"
langchain-openai = "^0.3.28"
langchain-chroma = "^0.2.4"
langchain-community = "^0.3.27"
openai = "^1.97.0"
chromadb = "^1.0.15"
google-cloud-secret-manager = "^2.24.0"


[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


